// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker :mode 1`] = `
<div
  class="t-date-picker t-input t-size-m t-date-picker--month-picker"
>
  <div
    class="t-popup-reference t-date-picker-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-date-picker"
        >
          <div
            class="t-date-picker--container"
          >
            <!---->
            <div
              class="t-date"
            >
              <div
                class="t-date-picker-header"
              >
                <span
                  class="t-date-picker-header-title"
                >
                  <span>
                    <span>
                      2020
                    </span>
                     至 
                    <span>
                      2029
                    </span>
                  </span>
                  <!---->
                  <!---->
                </span>
                <span
                  class="t-date-picker-header-controller"
                >
                  <button
                    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                    title="上个十年"
                    type="button"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-chevron-left"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M266.45122048 489.6415328C253.98241280000002 502.1382944 254.00507328000003 522.37688704 266.50183488 534.84569536L266.50183488 534.84569536 641.5903552 909.0951936 686.8451904 863.8403584 334.4904192 512.2516633600001 686.8451904 160.83449728 641.5903552 115.57966336000001 267.2264192 488.89166336 266.50183488 489.59088959999997 266.47651392 489.6162112Z"
                        fill-opacity=".9"
                        fill-rule="evenodd"
                      />
                    </svg>
                    
                    
                    
                  </button>
                  <button
                    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn t-date-picker-header-controller__btn--now"
                    title="当前"
                    type="button"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-round"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M512 736C635.712 736 736 635.712 736 512 736 388.288 635.712 288 512 288 388.288 288 288 388.288 288 512 288 635.712 388.288 736 512 736ZM512 832C688.7296 832 832 688.7296 832 512 832 335.26912 688.7296 192 512 192 335.26912 192 192 335.26912 192 512 192 688.7296 335.26912 832 512 832Z"
                        fill-opacity=".9"
                        fill-rule="evenodd"
                      />
                    </svg>
                    
                    
                    
                  </button>
                  <button
                    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                    title="下个十年"
                    type="button"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-chevron-right"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
                        fill-opacity=".9"
                        fill-rule="evenodd"
                      />
                    </svg>
                    
                    
                    
                  </button>
                </span>
              </div>
              <div
                class="t-date-picker-year"
              >
                <table>
                  <!---->
                  <tbody>
                    
                    <tr>
                      
                      <td
                        class="t-date-picker-cell t-date-cell--now t-date-cell--active"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2020
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2021
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2022
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2023
                          </span>
                        </div>
                      </td>
                      
                    </tr>
                    <tr>
                      
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2024
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2025
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2026
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2027
                          </span>
                        </div>
                      </td>
                      
                    </tr>
                    <tr>
                      
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2028
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2029
                          </span>
                        </div>
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-form-controls"
    >
      <div
        allowinput="0"
        class="t-input t-size-m t-input--suffix"
        modelvalue=""
      >
        <!---->
        <input
          autocomplete="false"
          class="t-input__inner"
          readonly=""
          type="text"
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-calendar"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M384 128L384 192 640 192 640 128 704 128 704 192 832 192C867.3462208 192 896 220.653776 896 256L896 832C896 867.3462208 867.3462208 896 832 896L192 896C156.653776 896 128 867.3462208 128 832L128 256C128 220.653776 156.653776 192 192 192L320 192 320 128 384 128ZM320 256L192 256 192 832 832 832 832 256 704 256 704 320 640 320 640 256 384 256 384 320 320 320 320 256ZM192 384L832 384 832 448 192 448 192 384Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`DatePicker :range 1`] = `
<div
  class="t-date-picker t-input t-size-m t-date-picker--month-picker"
>
  <div
    class="t-popup-reference t-date-picker-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-date-picker"
        >
          <div
            class="t-date-picker--container t-date-picker--ranges-show"
          >
            <!---->
            <div
              class="t-date-range"
            >
              <div
                class="t-date"
              >
                <div
                  class="t-date-picker-header"
                >
                  <span
                    class="t-date-picker-header-title"
                  >
                    <!---->
                    <button
                      class="t-button t-size-s t-button--variant-text t-button--theme-default t-date-header__btn"
                      type="button"
                    >
                      <span
                        class="t-button__text"
                      >
                        
                        2020 年
                        
                      </span>
                    </button>
                    <!---->
                  </span>
                  <span
                    class="t-date-picker-header-controller"
                  >
                    <button
                      class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                      title="上一年"
                      type="button"
                    >
                      
                      
                      <svg
                        class="t-icon t-icon-chevron-left"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M266.45122048 489.6415328C253.98241280000002 502.1382944 254.00507328000003 522.37688704 266.50183488 534.84569536L266.50183488 534.84569536 641.5903552 909.0951936 686.8451904 863.8403584 334.4904192 512.2516633600001 686.8451904 160.83449728 641.5903552 115.57966336000001 267.2264192 488.89166336 266.50183488 489.59088959999997 266.47651392 489.6162112Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                      
                      
                      
                    </button>
                    <button
                      class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn t-date-picker-header-controller__btn--now"
                      title="当前"
                      type="button"
                    >
                      
                      
                      <svg
                        class="t-icon t-icon-round"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M512 736C635.712 736 736 635.712 736 512 736 388.288 635.712 288 512 288 388.288 288 288 388.288 288 512 288 635.712 388.288 736 512 736ZM512 832C688.7296 832 832 688.7296 832 512 832 335.26912 688.7296 192 512 192 335.26912 192 192 335.26912 192 512 192 688.7296 335.26912 832 512 832Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                      
                      
                      
                    </button>
                    <button
                      class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                      title="下一年"
                      type="button"
                    >
                      
                      
                      <svg
                        class="t-icon t-icon-chevron-right"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                      
                      
                      
                    </button>
                  </span>
                </div>
                <div
                  class="t-date-picker-month"
                >
                  <table>
                    <!---->
                    <tbody>
                      
                      <tr>
                        
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              1 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              2 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              3 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              4 月
                            </span>
                          </div>
                        </td>
                        
                      </tr>
                      <tr>
                        
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              5 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              6 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              7 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              8 月
                            </span>
                          </div>
                        </td>
                        
                      </tr>
                      <tr>
                        
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              9 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              10 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              11 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell t-date-cell--now t-date-cell--active t-date-cell--active-start t-date-cell--active-end"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              12 月
                            </span>
                          </div>
                        </td>
                        
                      </tr>
                      
                    </tbody>
                  </table>
                </div>
              </div>
              <div
                class="t-date"
              >
                <div
                  class="t-date-picker-header"
                >
                  <span
                    class="t-date-picker-header-title"
                  >
                    <!---->
                    <button
                      class="t-button t-size-s t-button--variant-text t-button--theme-default t-date-header__btn"
                      type="button"
                    >
                      <span
                        class="t-button__text"
                      >
                        
                        2021 年
                        
                      </span>
                    </button>
                    <!---->
                  </span>
                  <span
                    class="t-date-picker-header-controller"
                  >
                    <button
                      class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                      title="上一年"
                      type="button"
                    >
                      
                      
                      <svg
                        class="t-icon t-icon-chevron-left"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M266.45122048 489.6415328C253.98241280000002 502.1382944 254.00507328000003 522.37688704 266.50183488 534.84569536L266.50183488 534.84569536 641.5903552 909.0951936 686.8451904 863.8403584 334.4904192 512.2516633600001 686.8451904 160.83449728 641.5903552 115.57966336000001 267.2264192 488.89166336 266.50183488 489.59088959999997 266.47651392 489.6162112Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                      
                      
                      
                    </button>
                    <button
                      class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn t-date-picker-header-controller__btn--now"
                      title="当前"
                      type="button"
                    >
                      
                      
                      <svg
                        class="t-icon t-icon-round"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M512 736C635.712 736 736 635.712 736 512 736 388.288 635.712 288 512 288 388.288 288 288 388.288 288 512 288 635.712 388.288 736 512 736ZM512 832C688.7296 832 832 688.7296 832 512 832 335.26912 688.7296 192 512 192 335.26912 192 192 335.26912 192 512 192 688.7296 335.26912 832 512 832Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                      
                      
                      
                    </button>
                    <button
                      class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                      title="下一年"
                      type="button"
                    >
                      
                      
                      <svg
                        class="t-icon t-icon-chevron-right"
                        version="1.1"
                        viewBox="0 0 1024 1024"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
                          fill-opacity=".9"
                          fill-rule="evenodd"
                        />
                      </svg>
                      
                      
                      
                    </button>
                  </span>
                </div>
                <div
                  class="t-date-picker-month"
                >
                  <table>
                    <!---->
                    <tbody>
                      
                      <tr>
                        
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              1 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              2 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              3 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              4 月
                            </span>
                          </div>
                        </td>
                        
                      </tr>
                      <tr>
                        
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              5 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              6 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              7 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              8 月
                            </span>
                          </div>
                        </td>
                        
                      </tr>
                      <tr>
                        
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              9 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              10 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              11 月
                            </span>
                          </div>
                        </td>
                        <td
                          class="t-date-picker-cell"
                        >
                          <div
                            class="t-date-cell__wrapper"
                          >
                            <span
                              class="t-date-cell__text"
                            >
                              12 月
                            </span>
                          </div>
                        </td>
                        
                      </tr>
                      
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-form-controls"
    >
      <div
        allowinput="0"
        class="t-input t-size-m t-input--suffix"
        modelvalue="2018-08-01T00:00:00+08:00,2028-04-01T00:00:00+08:00"
      >
        <!---->
        <input
          autocomplete="false"
          class="t-input__inner"
          readonly=""
          type="text"
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-calendar"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M384 128L384 192 640 192 640 128 704 128 704 192 832 192C867.3462208 192 896 220.653776 896 256L896 832C896 867.3462208 867.3462208 896 832 896L192 896C156.653776 896 128 867.3462208 128 832L128 256C128 220.653776 156.653776 192 192 192L320 192 320 128 384 128ZM320 256L192 256 192 832 832 832 832 256 704 256 704 320 640 320 640 256 384 256 384 320 320 320 320 256ZM192 384L832 384 832 448 192 448 192 384Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`DatePicker :value 1`] = `
<div
  class="t-date-picker t-input t-size-m t-date-picker--month-picker"
>
  <div
    class="t-popup-reference t-date-picker-popup-reference"
  >
    <transition-stub>
      <div
        aria-hidden="true"
        class="t-popup"
        role="tooltip"
        style="display: none;"
      >
        <div
          class="t-popup-content t-date-picker"
        >
          <div
            class="t-date-picker--container"
          >
            <!---->
            <div
              class="t-date"
            >
              <div
                class="t-date-picker-header"
              >
                <span
                  class="t-date-picker-header-title"
                >
                  <!---->
                  <button
                    class="t-button t-size-s t-button--variant-text t-button--theme-default t-date-header__btn"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      
                      2020 年
                      
                    </span>
                  </button>
                  <!---->
                </span>
                <span
                  class="t-date-picker-header-controller"
                >
                  <button
                    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                    title="上一年"
                    type="button"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-chevron-left"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M266.45122048 489.6415328C253.98241280000002 502.1382944 254.00507328000003 522.37688704 266.50183488 534.84569536L266.50183488 534.84569536 641.5903552 909.0951936 686.8451904 863.8403584 334.4904192 512.2516633600001 686.8451904 160.83449728 641.5903552 115.57966336000001 267.2264192 488.89166336 266.50183488 489.59088959999997 266.47651392 489.6162112Z"
                        fill-opacity=".9"
                        fill-rule="evenodd"
                      />
                    </svg>
                    
                    
                    
                  </button>
                  <button
                    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn t-date-picker-header-controller__btn--now"
                    title="当前"
                    type="button"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-round"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M512 736C635.712 736 736 635.712 736 512 736 388.288 635.712 288 512 288 388.288 288 288 388.288 288 512 288 635.712 388.288 736 512 736ZM512 832C688.7296 832 832 688.7296 832 512 832 335.26912 688.7296 192 512 192 335.26912 192 192 335.26912 192 512 192 688.7296 335.26912 832 512 832Z"
                        fill-opacity=".9"
                        fill-rule="evenodd"
                      />
                    </svg>
                    
                    
                    
                  </button>
                  <button
                    class="t-button t-size-m t-button--variant-text t-button--theme-default t-button--icon-only t-date-picker-header-controller__btn"
                    title="下一年"
                    type="button"
                  >
                    
                    
                    <svg
                      class="t-icon t-icon-chevron-right"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M413.4592 797.3888L354.62784 738.56 581.21216 511.97568 354.62784 285.39136 413.4592 226.56 698.8736 511.97568 413.4592 797.3888Z"
                        fill-opacity=".9"
                        fill-rule="evenodd"
                      />
                    </svg>
                    
                    
                    
                  </button>
                </span>
              </div>
              <div
                class="t-date-picker-month"
              >
                <table>
                  <!---->
                  <tbody>
                    
                    <tr>
                      
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            1 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            2 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            3 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            4 月
                          </span>
                        </div>
                      </td>
                      
                    </tr>
                    <tr>
                      
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            5 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            6 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            7 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            8 月
                          </span>
                        </div>
                      </td>
                      
                    </tr>
                    <tr>
                      
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            9 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            10 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            11 月
                          </span>
                        </div>
                      </td>
                      <td
                        class="t-date-picker-cell t-date-cell--now t-date-cell--active"
                      >
                        <div
                          class="t-date-cell__wrapper"
                        >
                          <span
                            class="t-date-cell__text"
                          >
                            12 月
                          </span>
                        </div>
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
              </div>
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </transition-stub>
    
    <div
      class="t-form-controls"
    >
      <div
        allowinput="0"
        class="t-input t-size-m t-input--suffix"
        modelvalue="1998-11-11T00:00:00+08:00"
      >
        <!---->
        <input
          autocomplete="false"
          class="t-input__inner"
          readonly=""
          type="text"
        />
        <span
          class="t-input__suffix"
        >
          <svg
            class="t-icon t-icon-calendar"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M384 128L384 192 640 192 640 128 704 128 704 192 832 192C867.3462208 192 896 220.653776 896 256L896 832C896 867.3462208 867.3462208 896 832 896L192 896C156.653776 896 128 867.3462208 128 832L128 256C128 220.653776 156.653776 192 192 192L320 192 320 128 384 128ZM320 256L192 256 192 832 832 832 832 256 704 256 704 320 640 320 640 256 384 256 384 320 320 320 320 256ZM192 384L832 384 832 448 192 448 192 384Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    
  </div>
</div>
`;
